Built in quotes don't use lang attribute https://bugs.webkit.org/show_bug.cgi?id=92918

Patch by Elliott Sprehn <esprehn@gmail.com> on 2012-08-02
Reviewed by Alexey Proskuryakov.

Source/WebCore:

Previously even though there was a table in RenderQuote of languages mapped
to quotes we always used basic quotes. This patch removes the broken tree
walking and uses Element::computeInheritedLanguage fixing this.

Tests: fast/css-generated-content/quotes-lang-expected.html
       fast/css-generated-content/quotes-lang.html
       fast/css-generated-content/quotes-xml-lang-expected.html
       fast/css-generated-content/quotes-xml-lang.html

* rendering/RenderQuote.cpp:
(WebCore::RenderQuote::originalText):
(WebCore::RenderQuote::quotesData): New method that determines the right QuotesData to use.
(WebCore):
* rendering/RenderQuote.h:
(RenderQuote):

LayoutTests:

Add a test that the built in quote languages are used and that custom
languages work as well. This also tests that xml:lang takes precedence
over lang.

* fast/css-generated-content/quotes-lang-expected.html: Added.
* fast/css-generated-content/quotes-lang.html: Added.
* fast/css-generated-content/quotes-xml-lang-expected.html: Added.
* fast/css-generated-content/quotes-xml-lang.html: Added.

Canonical link: https://commits.webkit.org/110882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124518 268f45cc-cd09-0410-ab3c-d52691b4dbfc